new corruptions added

--- a/config_eval.yaml
+++ b/config_eval.yaml
@@ -1,13 +1,18 @@
-system:
-  device: "cuda"
-  fp16: false
 data:
+  root: "/home/rahim/exp/Data/Agriculture_pest_dataset"  # Update this to your actual data path
   img_size: 224
   resize: 256
-  batch_size: 64
-  num_workers: 4
-  manifest_path: ./checkpoints/split_manifest.json
-  ckpt_path: ./checkpoints/mobilenetv3_best.pt
+  batch_size: 32
+  num_workers: 2
+  train_frac: 0.7
+  val_frac: 0.15
+  test_frac: 0.15
+  balance_seed: 42
+
+system:
+  device: "cuda"
+  seed: 42
+
 tta:
   alpha: 1.0
   beta: 8.0
@@ -16,14 +21,11 @@ tta:
   tau_pos: 0.80
   tau_ref: 0.75
   tau_neg: 0.20
-  top_neg: 3
   pos_cache_size: 128
   neg_cache_size: 64
-  sim_aggregate: topk_mean
+  sim_aggregate: "topk_mean"
   topk: 5
-  second_pass: true
-  # Cache warmup settings
-  warmup_enabled: true              # Enable/disable cache warmup
-  warmup_samples_per_class: 10      # Max samples per class for warmup
-  warmup_tau_pos: 0.90             # Higher threshold for warmup positives
-  warmup_tau_neg: 0.15             # Lower threshold for warmup negatives
+  warmup_enabled: true
+  warmup_samples_per_class: 10
+  warmup_tau_pos: 0.90
+  warmup_tau_neg: 0.15
