--- a/config_train.yaml
+++ b/config_train.yaml
@@ -1,4 +1,4 @@
-# Enhanced training configuration with weather/lighting corruptions
+# Fixed training configuration with more conservative settings
 system:
   device: "cuda"
   seed: 42
@@ -8,58 +8,40 @@ data:
   root: "/home/rahim/exp/Data/Agriculture_pest_dataset"
   img_size: 224
   resize: 256
-  batch_size: 32  # Reduced for memory efficiency with enhanced model
-  num_workers: 4
+  batch_size: 16
+  num_workers: 0
   train_frac: 0.7
   val_frac: 0.15
   test_frac: 0.15
   balance_seed: 42
 
 train:
-  epochs: 10
-  lr: 3e-4
-  weight_decay: 1e-4
-  freeze_backbone: true
+  epochs: 15
+  lr: 0.0002
+  weight_decay: 0.0001
+  freeze_backbone: false
   label_smoothing: 0.1
-  dropout_rate: 0.3  # Enhanced regularization
+  dropout_rate: 0.2
   ckpt_dir: "./checkpoints"
-  ckpt_name: "mobilenetv3_13classes_enhanced.pt"
+  ckpt_name: "mobilenetv3_13classes_best_vanilla.pt"
 
 corruption_finetune:
   enabled: true
   contrastive_enabled: true
   epochs: 15
-  lr: 1e-4
-  weight_decay: 2e-4
+  lr: 0.00005  # Much lower learning rate
+  weight_decay: 0.0002
   feature_dim: 256
   
-  # Enhanced corruption types
-  corruption_types:
-    - "gaussian_noise"
-    - "motion_blur" 
-    - "brightness"
-    - "contrast"
-    - "rain"
-    - "snow" 
-    - "frost"
-    - "fog"
-    - "low_light"
-    - "high_light"
-    - "shadow"
-    - "glare"
-    - "haze"
-    - "mist"
+  # More conservative regularization weights
+  clean_regularization_weight: 0.3  # Reduced
+  consistency_weight: 0.1            # Reduced  
+  contrastive_weight: 0.2            # Reduced
+  contrastive_temperature: 0.1       # Higher temperature
   
-  corruption_prob: 0.8
-  severity_range: [1, 5]
-  
-  # Enhanced contrastive learning
-  contrastive_weight: 0.6
-  contrastive_temperature: 0.05
-  contrastive_pairs_per_batch: 0.8
-  
-  # Regularization
-  use_mixup: true
-  mixup_alpha: 0.4
+  corruption_prob: 0.3               # Lower corruption probability
+  severity_range: [1, 2]             # Start with lower severity
+  stages: 3
+  epochs_per_stage: 3                # Fewer epochs per stage
   
   ckpt_name: "mobilenetv3_13classes_enhanced_weather_contrastive.pt"
