--- a/config_vanilla_train.yaml
+++ b/config_vanilla_train.yaml
@@ -1,28 +1,25 @@
-data:
-  root: /home/rahim/exp/Data/Agriculture_pest_dataset
-  img_size: 224
-  resize: 256
-  train_frac: 0.70
-  val_frac: 0.15
-  test_frac: 0.15
-  batch_size: 32
-  num_workers: 4
-  balance_seed: 42
-
+# Vanilla MobileNetV3 training configuration
 system:
   device: "cuda"
   seed: 42
-  fp16: true
+
+data:
+  root: "/home/rahim/exp/Data/Agriculture_pest_dataset"
+  img_size: 224
+  resize: 256
+  batch_size: 32
+  num_workers: 4
+  train_frac: 0.7
+  val_frac: 0.15
+  test_frac: 0.15
+  balance_seed: 42
 
 train:
-  epochs: 10
-  lr: 0.001  # Use numeric value instead of scientific notation
+  epochs: 25
+  lr: 0.001
   weight_decay: 0.0001
-  freeze_backbone: false
+  freeze_backbone: true
   label_smoothing: 0.1
+  dropout_rate: 0.3
   ckpt_dir: "./checkpoints"
-  ckpt_name: "mobilenetv3_13classes_vanilla.pt"
-  warmup_epochs: 2
-
-corruption_finetune:
-  enabled: false  # Disable contrastive learning for vanilla model
+  warmup_epochs: 3
